--- a/Teacher/lost_found.css
+++ b/Teacher/lost_found.css
@@ -7,7 +7,7 @@ body {
 
 /* Header */
 header.topbar {
-    /* position: sticky;7 */
+    /* position: sticky; */
     top: 0;
     z-index: 50;
     backdrop-filter: saturate(140%) blur(8px);
